2003-10-28  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=115435
	* font-properties.glade : some of the UI review changes.

	http://bugzilla.gnome.org/show_bug.cgi?id=124513
	* main.c (setup_font_sample) : merge in patch to allocate black and
	  white correctly on TruColor displays.

2003-10-23  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=106489
	* main.c (dpi_load) : add some protection again invalid dpi in the
	  case of gconf failure.

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* font-properties.glade: Patch to fix spacing between action 
	area and vbox of preferences dialog.

Sat Aug  2 01:16:16 2003  Jonathan Blandford  <jrb@gnome.org>

	* main.c (application_font_to_gconf): Warn when a font larger than
	31 points is selected, #97653.

2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>

	* font-properties.glade:  Some HIGification of the dialog.
	Fixes some of ui-review bug #98922.
	
2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

Wed Jan 15 12:50:34 2003  Jonathan Blandford  <jrb@redhat.com>

	* main.c (cb_details_response): run "nautilus --no-desktop
	fonts:///" if button pressed.

	(cb_show_details): show a 'Go to font folder' button if fonts:///
	exists.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-13  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* main.c: Added the "desktop_font" key directory to the list