@@ -1,5 +1,8 @@
 2003-10-28  Jody Goldberg <jody@gnome.org>
 
+	http://bugzilla.gnome.org/show_bug.cgi?id=116710
+	* main.c (cb_show_details) : be smarter about selecting a maximum
+
 	http://bugzilla.gnome.org/show_bug.cgi?id=115435
 	* font-properties.glade : some of the UI review changes.
 
